Added html markup

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,87 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<h1>Hello</h1>
+	<header class="page-header">
+		<div class="container">
+			<div class="page-header__logo">
+				<h1>
+				  <a href="#" class="logo">Bikees<span class="logo__bit-basta">.</span></a>
+			  </h1>
+			</div>
+			<div class="page-header__search">
+				<i class="page-header__icon-search">
+				<input type="search" name="search" id="search" placeholder="Поиск">
+			</div>
+		</div>
+	</header>
+	<main>
+		<div class="index-blocks">
+			<section class="fixies index-blocks__item">
+				<h2 class="fixies__title">Fixies</h2>
+				<span class="fixies__style">Hisper style</span>
+				<a href="#" class="btn btn--fixies">Choisir son modele</a>
+			</section>
+			<section class="cruisers index-blocks__item">
+				<h2 class="cruisers__title">Cruisers</h2>
+				<span class="cruisers__style">Hippie style</span>
+				<a href="#" class="btn btn--cruisers">Choisir son modele</a>
+			</section>
+		</div>
+	</main>
+	<footer class="page-footer">
+		<div class="page-footer__left">
+			<a href="#" class="logo">
+				Bikees<span class="logo__bit-basta">.</span>
+			</a>
+			<p class="page-footer__paiement">PAIEMENT 100% SECURISÉ - DONNÉES CRIPTÉES ET CHIFRÉES.</p>
+			<a href="#" class="page-footer__livraison">Livraison gratuite à partir de 50€ d’achat</a>
+			<p class="page-footer__copyright">©BIKEES.2015</p>
+		</div>
+		<div class="page-footer__right">
+			<nav class="footer-nav">
+				<ul class="footer-nav__list">
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">Fixies</a>
+					</li>
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">Cruisers</a>
+					</li>
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">Accessoires</a>
+					</li>
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">Mentions</a>
+					</li>
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">C.G.U</a>
+					</li>
+					<li class="footer-nav__item">
+						<a href="#" class="footer-nav__link">Contact</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="subs-and-socials">
+				<section class="subs">
+					<h2 class="visual-hidden">Newsletter</h2>
+					<p class="subs__title">Inscription Newsletter</p>
+					<input type="email" id="emailAdress" name="emailAdress" placeholder="Saisissez votre adresse mail">
+				</section>
+				<section class="socials">
+					<h2 class="visual-hidden">Socials</h2>
+					<ul class="socials__list">
+						<li class="socials__items">
+							<a href="#" class="socials__link socials__link--twitter">Twitter</a>
+						</li>
+						<li class="socials__items">
+							<a href="#" class="socials__link socials__link--google">Google+</a>
+						</li>
+						<li class="socials__items">
+							<a href="#" class="socials__link socials__link--facebook">Facebook</a>
+						</li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
